Parent/Child and dependency relationship set in poms. Existing projects with non parental source control locations used, adjusting via the relativepath construct in the pom.

--- a/MavenWebApp/pom.xml
+++ b/MavenWebApp/pom.xml
@@ -5,7 +5,6 @@
 	<groupId>hunwardsen.com</groupId>
 	<artifactId>MavenWebApp</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>MavenWebApp</name>
 	<url>http://hunwardsen.com</url>
 
@@ -41,4 +40,10 @@
 		</plugins>
 	</build>
 
+	<parent>
+		<groupId>com.hunwardsen</groupId>
+		<artifactId>MavenMultiModule</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../../MavenMultiModule/MavenMultiModule</relativePath>
+	</parent>
 </project>
