--- a/MavenWebApp/pom.xml
+++ b/MavenWebApp/pom.xml
@@ -2,12 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>hunwardsen.com</groupId>
 	<artifactId>MavenWebApp</artifactId>
 	<packaging>war</packaging>
 	<name>MavenWebApp</name>
-	<url>http://hunwardsen.com</url>
 
+	<parent>
+		<groupId>com.hunwardsen</groupId>
+		<artifactId>MavenMultiModule</artifactId>
+		<version>0.0.2-SNAPSHOT</version>
+		<relativePath>../../MavenMultiModule/MavenMultiModule</relativePath>
+	</parent>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -20,6 +25,11 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.hunwardsen</groupId>
+			<artifactId>MavenWeatherTutorial</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -40,10 +50,4 @@
 		</plugins>
 	</build>
 
-	<parent>
-		<groupId>com.hunwardsen</groupId>
-		<artifactId>MavenMultiModule</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../../MavenMultiModule/MavenMultiModule</relativePath>
-	</parent>
 </project>
